--- a/www_root/vue/project/dashboard/package.json
+++ b/www_root/vue/project/dashboard/package.json
@@ -3,14 +3,14 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --open",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
-    "now-start": "vue-cli-service serve",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve --open",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "now-start": "vue-cli-service serve"
   },
   "dependencies": {
     "core-js": "^3.6.2",
@@ -39,7 +39,7 @@
     "vee-validate": "^3.2.2",
     "vue-chartist": "^2.2.1",
     "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vue-world-map": "^0.1.1",
     "vuetify-loader": "^1.4.3"
